--- a/FalsePromise.Net/FalsePromise/FalsePromise.csproj
+++ b/FalsePromise.Net/FalsePromise/FalsePromise.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jil" Version="2.17.0" />
     <PackageReference Include="Microsoft.WinUI" Version="3.0.0-preview3.201113.0" />
   </ItemGroup>
 </Project>
