--- a/FalsePromise.Net/FalsePromise.WinUI/FalsePromise.WinUI.csproj
+++ b/FalsePromise.Net/FalsePromise.WinUI/FalsePromise.WinUI.csproj
@@ -2,8 +2,9 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows10.0.18362.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17134.0</TargetPlatformMinVersion>
-    <RootNamespace>FalsePromise</RootNamespace>
+    <RootNamespace>FalsePromise.WinUI</RootNamespace>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+    <AssemblyName>FalsePromise.WinUI</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
