--- a/FalsePromise.JS/package.json
+++ b/FalsePromise.JS/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "description": "Simple message handler & router for communicating between C# and WinUI 3 WebView2",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
     "uuid-random": "^1.3.2"
   },
