--- a/FalsePromise.Net/FalsePromise.Router/FalsePromise.Router.csproj
+++ b/FalsePromise.Net/FalsePromise.Router/FalsePromise.Router.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Jil" Version="2.17.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FalsePromise.Interfaces\FalsePromise.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
